--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   margin: auto;
   padding-bottom: 1rem;
   overflow: hidden;
+  box-shadow: 2px 2px 2px 0.5;
 }
 h1 {
   text-align: center;
@@ -40,4 +41,9 @@ ul li {
 }
 ul li:first-child {
   border-top: 1px solid red;
+}
+ul li:hover {
+  text-decoration: underline;
+  background-color: rgb(185, 230, 230);
+  cursor: pointer;
 }
